...
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#fe7f2d"
        android:textColor="#233d4d" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerEvents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="8dp" />

...
