...
                    android:orientation="vertical"
                    android:background="@drawable/bg_input_sharp"
                    android:backgroundTint="#2f4858"
                    android:padding="4dp">

                    <LinearLayout
                        android:id="@+id/eventListContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="8dp"
...
