...
                android:textSize="26sp"
                android:fontFamily="@font/luckiestguy_regular"
                android:letterSpacing="-0.01"/>


            <LinearLayout
                android:id="@+id/adminListContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical" />

            <View android:layout_width="match_parent" android:layout_height="80dp" />
...
